prod/homelan/8-dashy/dashy-ingress-route-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashy-tls
  namespace: corp-apps
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashy.kirbyware.com`) 
      kind: Rule
      services:    
      - kind: Service
        name: dashy
        namespace: corp-apps
        port: 80
  tls:
    secretName: test-kirbyware-com-production-tls
